--- a/systemd.cabal
+++ b/systemd.cabal
@@ -17,6 +17,7 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:  System.Systemd.Daemon
+  c-sources:        System/Systemd/socket_info.c
   -- other-modules:
   -- other-extensions:
   build-depends:       base >=4.7 && <4.8,
@@ -32,6 +33,7 @@ executable test
     hs-source-dirs: src
     ghc-options:         -Wall -O3 -threaded
     main-is:             Main.hs
+    default-language:    Haskell2010
   build-depends:       base >=4.7 && <4.8,
                        unix >= 2.5,
                        transformers >= 0.3,
