--- a/systemd.cabal
+++ b/systemd.cabal
@@ -22,25 +22,19 @@ source-repository head
 library
   exposed-modules:  System.Systemd.Daemon
   c-sources:        System/Systemd/socket_info.c
-  -- other-modules:
-  -- other-extensions:
-  build-depends:       base >=4.7 && <4.8,
+  build-depends:       base >=4.7,
                        unix >= 2.5,
                        transformers >= 0.3,
                        network >=2.3,
                        bytestring >= 0.10
 
-  -- hs-source-dirs:      System/Systemd
   default-language:    Haskell2010
 
-executable test
-    hs-source-dirs: src
-    ghc-options:         -Wall -O3 -threaded
-    main-is:             Main.hs
-    default-language:    Haskell2010
-    build-depends:       base >=4.7 && <4.8,
-                       unix >= 2.5,
-                       transformers >= 0.3,
-                       network >=2.3,
-                       bytestring >= 0.10,
-                       systemd
+test-suite daemon-test
+   hs-source-dirs:      test
+   type:                exitcode-stdio-1.0
+   main-is:             Main.hs
+   default-language:    Haskell2010
+   build-depends:       base >=4.7,
+                        systemd
+   default-language:    Haskell2010
