--- a/systemd.cabal
+++ b/systemd.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                systemd
-version:             0.1.0.0
+version:             1.0.1
 synopsis:            Systemd facilities (Socket activation, Notify)
 description:         A module for Systemd facilities.
 homepage:            https://github.com/erebe/systemd
@@ -22,7 +22,7 @@ source-repository head
 library
   exposed-modules:  System.Systemd.Daemon
   c-sources:        System/Systemd/socket_info.c
-  build-depends:       base >=4.7,
+  build-depends:       base >=4.7 && <= 4.8.1.0,
                        unix >= 2.5,
                        transformers >= 0.3,
                        network >=2.3,
@@ -35,6 +35,6 @@ test-suite daemon-test
    type:                exitcode-stdio-1.0
    main-is:             Main.hs
    default-language:    Haskell2010
-   build-depends:       base >=4.7,
+   build-depends:       base >=4.7 && <= 4.8.1.0,
                         systemd
    default-language:    Haskell2010
