--- a/systemd.cabal
+++ b/systemd.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                systemd
-version:             1.0.2
+version:             1.0.5
 synopsis:            Systemd facilities (Socket activation, Notify)
 description:         A module for Systemd facilities.
 homepage:            https://github.com/erebe/systemd
@@ -14,6 +14,7 @@ maintainer:          romain.gerard@erebe.eu
 category:            System
 build-type:          Simple
 extra-source-files:  README.md
+stability:           stable
 cabal-version:       >=1.10
 source-repository head
     type: git
