--- a/systemd.cabal
+++ b/systemd.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                systemd
-version:             1.0.5
+version:             1.0.6
 synopsis:            Systemd facilities (Socket activation, Notify)
 description:         A module for Systemd facilities.
 homepage:            https://github.com/erebe/systemd
@@ -36,6 +36,6 @@ test-suite daemon-test
    type:                exitcode-stdio-1.0
    main-is:             Main.hs
    default-language:    Haskell2010
-   build-depends:       base == 4.*
-                        , systemd
+   build-depends:       base == 4.*,
+                        systemd
    default-language:    Haskell2010
