--- a/systemd.cabal
+++ b/systemd.cabal
@@ -21,6 +21,7 @@ source-repository head
     location: https://github.com/erebe/systemd
 
 library
+  ghc-options:      -Wall
   exposed-modules:  System.Systemd.Daemon
   c-sources:        System/Systemd/socket_info.c
   build-depends:       base == 4.* ,
@@ -37,5 +38,7 @@ test-suite daemon-test
    main-is:             Main.hs
    default-language:    Haskell2010
    build-depends:       base == 4.*,
+                        network >=2.3,
+                        unix >= 2.5,
                         systemd
    default-language:    Haskell2010
