--- a/systemd.cabal
+++ b/systemd.cabal
@@ -15,7 +15,7 @@ category:            System
 build-type:          Simple
 extra-source-files:  README.md
 stability:           stable
-cabal-version:       >=1.10
+cabal-version:       >=2.0
 source-repository head
     type: git
     location: https://github.com/erebe/systemd
@@ -27,7 +27,7 @@ library
   build-depends:       base == 4.* ,
                        unix >= 2.5,
                        transformers >= 0.3,
-                       network >= 2.6.3.2,
+                       network ^>=3.1.0.0,
                        bytestring >= 0.10
 
   default-language:    Haskell2010
@@ -37,7 +37,7 @@ test-suite daemon-test
    type:                exitcode-stdio-1.0
    main-is:             Main.hs
    build-depends:       base == 4.*,
-                        network >= 2.6.3.2,
+                        network ^>=3.1.0.0,
                         unix >= 2.5,
                         systemd
    default-language:    Haskell2010
