Introduce System.Systemd.Daemon.Fd
This commit restructures the code of this library in a major
fashion. All functions exposed by System.Systemd.Daemon that
involve Sockets now have an equivalent in System.Systemd.Daemon.Fd
that uses Fd from System.Posix.Types (which doesn't hurt portability
since we already use System.Posix.Types and network seems to use
it internally). To prevent doubled implementations all functions
in System.Systemd.Daemon now use (if applicable) their respective
counterpart from System.Systemd.Daemon.Fd. Shared code between
Fd-related notifications and normal notifications has been moved
to System.Systemd.Internal which is not exposed.

To use the Fd-based interface a library user can either import it
qualified or hide the functions of the same name from the normal
module.

This commit also includes documentation on the changes and new
functions. As well as quick advice on usage.

Bumps version to 2.1.0.

Resolves #7.

--- a/systemd.cabal
+++ b/systemd.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                systemd
-version:             2.0.0
+version:             2.1.0
 synopsis:            Systemd facilities (Socket activation, Notify)
 description:         A module for Systemd facilities.
 homepage:            https://github.com/erebe/systemd
@@ -23,6 +23,8 @@ source-repository head
 library
   ghc-options:      -Wall
   exposed-modules:  System.Systemd.Daemon
+                  , System.Systemd.Daemon.Fd
+  other-modules:    System.Systemd.Internal
   c-sources:        System/Systemd/socket_info.c
   build-depends:       base == 4.* ,
                        unix >= 2.5,
