--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -13,17 +13,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-haskell@v1
-      with:
-        ghc-version: '8.8.2'
-        cabal-version: '3.0'
-    - name: Install dependencies
+    - name: Install stack
       run: |
-        cabal update
-        cabal install --only-dependencies
-    - name: Build
+        curl -sSL https://get.haskellstack.org/ | sh
+        
+    - name: Setup GHC
       run: |
-        cabal configure --enable-tests
-        cabal build
-    - name: Run tests
-      run: cabal test
+        stack setup
+        
+    - name: Setup GHC
+      run: |
+        stack build
